--- a/js/packages/candy-machine-ui/src/App.css
+++ b/js/packages/candy-machine-ui/src/App.css
@@ -22,7 +22,7 @@ a {
 
 .footer {
   color: white;
-  margin-top: 80px;
+  margin-top: 50px;
   padding: 1.2em 0;
   background: #6100ff;
   bottom: 0;
@@ -36,12 +36,18 @@ a {
     margin-left: 75px;
     margin-right: 75px;
   }
+  img {
+    width: 250px;
+  }
 }
 
 @media (min-width: 600px) {
   .description {
     margin-left: 50px;
     margin-right: 50px;
+  }
+  img {
+    width: 500px;
   }
 }
 
